--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "org.cb.LabCalculator",
   "appName": "LabCalculator",
   "bundledWebRuntime": false,
   "npmClient": "npm",
