--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "LabCalculator",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "author": "Camille Barnier",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -30,13 +30,13 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "~10.0.5",
+    "@angular-devkit/build-angular": "^13.0.3",
+    "@angular/cli": "^13.0.3",
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular/language-service": "~10.0.0",
-    "@capacitor/cli": "2.4.2",
-    "@ionic/angular-toolkit": "^2.3.0",
+    "@capacitor/cli": "^3.3.2",
+    "@ionic/angular-toolkit": "^5.0.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.20.37",
@@ -51,7 +51,7 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
