--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LabCalculator",
+  "name": "labcalculator",
   "version": "0.0.3",
   "author": "Camille Barnier",
   "homepage": "https://ionicframework.com/",
@@ -30,13 +30,13 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.0.3",
+    "@angular-devkit/build-angular": "^0.8.7",
     "@angular/cli": "^13.0.3",
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular/language-service": "~10.0.0",
     "@capacitor/cli": "^3.3.2",
-    "@ionic/angular-toolkit": "^5.0.3",
+    "@ionic/angular-toolkit": "^5.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.20.37",
@@ -56,7 +56,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "~7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "^3.9.10"
