--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
-    "@ionic/angular": "^5.8.5",
-    "rxjs": "~6.5.5",
+    "@ionic/angular": "^7.7.3",
+    "ionic": "^5.4.16",
+    "rxjs": "^7.5.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.14.4"
   },
