--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^7.7.3",
+    "@ionic/angular-server": "^7.7.3",
     "ionic": "^5.4.16",
     "rxjs": "^7.5.0",
     "tslib": "^2.3.1",
@@ -45,7 +46,7 @@
     "@angular/language-service": "~17.2.3",
     "@capacitor/cli": "^5.7.1",
     "@cypress/schematic": "^2.5.1",
-    "@ionic/angular-toolkit": "^5.0.0",
+    "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.20.37",
