--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^7.7.3",
     "@ionic/angular-server": "^7.7.3",
-    "ionic": "^5.4.16",
+    "@ionic/core": "^7.7.3",
     "rxjs": "^7.5.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.14.4"
