remove ionic native

--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "@angular/platform-browser": "~17.2.3",
     "@angular/platform-browser-dynamic": "~17.2.3",
     "@angular/router": "~17.2.3",
-    "@capacitor/core": "2.4.2",
-    "@ionic-native/core": "^5.36.0",
-    "@ionic-native/splash-screen": "^5.36.0",
-    "@ionic-native/status-bar": "^5.36.0",
+    "@capacitor/android": "5.7.1",
+    "@capacitor/splash-screen": "^5.0.7",
+    "@capacitor/status-bar": "^5.0.7",
     "@ionic/angular": "^7.7.3",
     "@ionic/angular-server": "^7.7.3",
     "@ionic/core": "^7.7.3",
+    "@npmcli/fs": "^3.1.0",
+    "@npmcli/package-json": "^5.0.0",
     "rxjs": "^7.5.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.14.4"
@@ -45,6 +46,7 @@
     "@angular/compiler-cli": "~17.2.3",
     "@angular/language-service": "~17.2.3",
     "@capacitor/cli": "^5.7.1",
+    "@capacitor/core": "^5.7.1",
     "@cypress/schematic": "^2.5.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~3.5.0",
@@ -68,7 +70,6 @@
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.7.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
     "typescript": "^5.3.3"
   },
   "description": "A Lab Calculator project",
