--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "module":"CommonJS",
-    "moduleResolution": "node",
+    "module": "CommonJS",
+    "moduleResolution": "Classic",
     "importHelpers": true,
     "target": "es2015",
     "lib": [
